# justjustUnitree

./: .gitignore  CLAUDE.md  deploy.sh  mini_app_watcher.py  mini_app_watcher.service  momo_sdk_context.txt  pyproject.toml  requirements.txt  unitree_keys.env.template
config/: go2.yaml
docs/: GO2_SETUP_GUIDE.md
mini_app_templates/: dance_show.py  health_check.py  patrol_route.py  room_scanner.py
scripts/: install.sh  test_connection.py
src/jjai_go2/: __init__.py  __main__.py  config.py  telemetry_pusher.py  watchdog.py
src/jjai_go2/core/: __init__.py  event_bus.py  module.py  registry.py  types.py
src/jjai_go2/dashboard/: __init__.py  app.py
src/jjai_go2/dashboard/templates/: unitreego2.html
src/jjai_go2/mcp/: __init__.py  registry.py
src/jjai_go2/mcp/tools/: __init__.py  camera.py  movement.py  posture.py  system.py  tricks.py
src/jjai_go2/robot/: __init__.py  audio.py  camera.py  client.py  lidar.py  motion.py  posture.py  sensors.py  tricks.py
src/jjai_go2/voice/: __init__.py  agent.py  context_fuser.py
tests/: test_config.py  test_context_fuser.py  test_dashboard.py  test_event_bus.py  test_mcp_tools.py  test_registry.py
